EPBDS-12511 migrate management and users APIs to Spring Controllers